# temporal-common-sense

./: .gitignore  Dockerfile  README.md  confusion_matrices.json  correlation.py  evaluate.py  measure_common_sense.py  old_output.txt  output.txt  plot_confusion_matrices.py  pyproject.toml  requirements.txt  start_script.sh
confusion_matrices/: gpt2_confusion_matrix_counts_normalized.json  gpt2_confusion_matrix_values.json  gpt2_confusion_matrix_values_normalized.json  meta-llama-3-1-8b_confusion_matrix_counts.json  meta-llama-3-1-8b_confusion_matrix_counts_normalized.json  meta-llama-3-1-8b_confusion_matrix_values.json  meta-llama-3-1-8b_confusion_matrix_values_normalized.json  roberta-base_confusion_matrix_counts.json  roberta-base_confusion_matrix_counts_normalized.json  roberta-base_confusion_matrix_values.json  roberta-base_confusion_matrix_values_normalized.json
data/: claude_examples.json  event_pairs.json  gpt4o_examples.json  verbalizations.json
report/: freksa.bib  references.bib  report.aux  report.bbl  report.blg  report.fdb_latexmk  report.fls  report.tex
temporal_common_sense/: perplexity_causal_lm.py  probability_masked_lm.py  pseudo_log_likelihood_masked_lm.py
utils/: metrics.py  perplexity_causal_lm.py  probability_masked_lm.py  pseudo_log_likelihood_masked_lm.py  verbalize.py
